jarn/src/main/java/org/mini2Dx/yarn/parser/YarnParser.java
// Generated from Yarn.g4 by ANTLR 4.6
package org.mini2Dx.yarn.parser;
import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YarnParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VariableLiteral=1, NullLiteral=2, BooleanLiteral=3, StringLiteral=4, NumberLiteral=5, 
		IF=6, ELSEIF=7, ELSE=8, ENDIF=9, SET=10, TO=11, IS=12, LEFTCHEVRON=13, 
		RIGHTCHEVRON=14, LEFTOPTION=15, RIGHTOPTION=16, LABELNODESEPERATOR=17, 
		EQUALS=18, NOTEQUALS=19, GTE=20, LTE=21, GT=22, LT=23, PLUS=24, MINUS=25, 
		MULTIPLY=26, DIVIDE=27, MODULUS=28, AND=29, OR=30, TARGETNAME=31, PUNCTUATION=32, 
		TYPOGRAPHY=33, COLON=34, WHITESPACE=35, NEWLINE=36, SpeechChar=37;
	public static final int
		RULE_node = 0, RULE_block = 1, RULE_statement = 2, RULE_lineStatement = 3, 
		RULE_characterExpression = 4, RULE_textExpression = 5, RULE_ifStatement = 6, 
		RULE_elseifStatement = 7, RULE_elseStatement = 8, RULE_endifStatement = 9, 
		RULE_ifExpression = 10, RULE_elseifExpression = 11, RULE_conditionExpression = 12, 
		RULE_boolOperator = 13, RULE_comparatorExpression = 14, RULE_commandStatement = 15, 
		RULE_assignExpression = 16, RULE_numericOperationExpression = 17, RULE_valueExpression = 18, 
		RULE_numericOperator = 19, RULE_optionGroup = 20, RULE_optionStatement = 21;
	public static final String[] ruleNames = {
		"node", "block", "statement", "lineStatement", "characterExpression", 
		"textExpression", "ifStatement", "elseifStatement", "elseStatement", "endifStatement", 
		"ifExpression", "elseifExpression", "conditionExpression", "boolOperator", 
		"comparatorExpression", "commandStatement", "assignExpression", "numericOperationExpression", 
		"valueExpression", "numericOperator", "optionGroup", "optionStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'null'", null, null, null, "'if'", "'elseif'", "'else'", 
		"'endif'", "'set'", "'to'", "'is'", "'<<'", "'>>'", "'[['", "']]'", "'|'", 
		"'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", null, null, null, null, null, "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "VariableLiteral", "NullLiteral", "BooleanLiteral", "StringLiteral", 
		"NumberLiteral", "IF", "ELSEIF", "ELSE", "ENDIF", "SET", "TO", "IS", "LEFTCHEVRON", 
		"RIGHTCHEVRON", "LEFTOPTION", "RIGHTOPTION", "LABELNODESEPERATOR", "EQUALS", 
		"NOTEQUALS", "GTE", "LTE", "GT", "LT", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
		"MODULUS", "AND", "OR", "TARGETNAME", "PUNCTUATION", "TYPOGRAPHY", "COLON", 
		"WHITESPACE", "NEWLINE", "SpeechChar"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Yarn.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YarnParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class NodeContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(YarnParser.EOF, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).exitNode(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VariableLiteral) | (1L << NullLiteral) | (1L << BooleanLiteral) | (1L << StringLiteral) | (1L << NumberLiteral) | (1L << IF) | (1L << ELSEIF) | (1L << ELSE) | (1L << ENDIF) | (1L << SET) | (1L << TO) | (1L << IS) | (1L << LEFTCHEVRON) | (1L << RIGHTCHEVRON) | (1L << LEFTOPTION) | (1L << RIGHTOPTION) | (1L << LABELNODESEPERATOR) | (1L << EQUALS) | (1L << NOTEQUALS) | (1L << GTE) | (1L << LTE) | (1L << GT) | (1L << LT) | (1L << PLUS) | (1L << MINUS) | (1L << MULTIPLY) | (1L << DIVIDE) | (1L << MODULUS) | (1L << AND) | (1L << OR) | (1L << TARGETNAME) | (1L << PUNCTUATION) | (1L << TYPOGRAPHY) | (1L << COLON) | (1L << WHITESPACE) | (1L << NEWLINE) | (1L << SpeechChar))) != 0)) {
				{
				{
				setState(44);
				block();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			statement();
			setState(56);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(53);
					statement();
					}
					} 
				}
				setState(58);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(YarnParser.NEWLINE, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(YarnParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(YarnParser.WHITESPACE, i);
		}
		public ElseifStatementContext elseifStatement() {
			return getRuleContext(ElseifStatementContext.class,0);
		}
		public ElseStatementContext elseStatement() {
			return getRuleContext(ElseStatementContext.class,0);
		}
		public EndifStatementContext endifStatement() {
			return getRuleContext(EndifStatementContext.class,0);
		}
		public CommandStatementContext commandStatement() {
			return getRuleContext(CommandStatementContext.class,0);
		}
		public OptionGroupContext optionGroup() {
			return getRuleContext(OptionGroupContext.class,0);
		}
		public LineStatementContext lineStatement() {
			return getRuleContext(LineStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			int _alt;
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(59);
					match(WHITESPACE);
					}
					}
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(65);
				ifStatement();
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(66);
					match(WHITESPACE);
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				match(NEWLINE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(74);
					match(WHITESPACE);
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(80);
				elseifStatement();
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(81);
					match(WHITESPACE);
					}
					}
					setState(86);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(87);
				match(NEWLINE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(89);
					match(WHITESPACE);
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(95);
				elseStatement();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(96);
					match(WHITESPACE);
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(102);
				match(NEWLINE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(104);
					match(WHITESPACE);
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				elseStatement();
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(111);
					match(WHITESPACE);
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(NEWLINE);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(119);
					match(WHITESPACE);
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(125);
				endifStatement();
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(126);
					match(WHITESPACE);
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(132);
				match(NEWLINE);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(134);
					match(WHITESPACE);
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(140);
				commandStatement();
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(141);
					match(WHITESPACE);
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(147);
				match(NEWLINE);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(149);
				optionGroup();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(153);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(150);
						match(WHITESPACE);
						}
						} 
					}
					setState(155);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				}
				setState(156);
				lineStatement();
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(157);
					match(WHITESPACE);
					}
					}
					setState(162);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(163);
				match(NEWLINE);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(165);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineStatementContext extends ParserRuleContext {
		public TextExpressionContext textExpression() {
			return getRuleContext(TextExpressionContext.class,0);
		}
		public CharacterExpressionContext characterExpression() {
			return getRuleContext(CharacterExpressionContext.class,0);
		}
		public LineStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).enterLineStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).exitLineStatement(this);
		}
	}

	public final LineStatementContext lineStatement() throws RecognitionException {
		LineStatementContext _localctx = new LineStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lineStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(168);
				characterExpression();
				}
				break;
			}
			setState(171);
			textExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharacterExpressionContext extends ParserRuleContext {
		public TerminalNode TARGETNAME() { return getToken(YarnParser.TARGETNAME, 0); }
		public TerminalNode COLON() { return getToken(YarnParser.COLON, 0); }
		public CharacterExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_characterExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).enterCharacterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).exitCharacterExpression(this);
		}
	}

	public final CharacterExpressionContext characterExpression() throws RecognitionException {
		CharacterExpressionContext _localctx = new CharacterExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_characterExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(TARGETNAME);
			setState(174);
			match(COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextExpressionContext extends ParserRuleContext {
		public List<TerminalNode> SpeechChar() { return getTokens(YarnParser.SpeechChar); }
		public TerminalNode SpeechChar(int i) {
			return getToken(YarnParser.SpeechChar, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(YarnParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YarnParser.NEWLINE, i);
		}
		public TextExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).enterTextExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).exitTextExpression(this);
		}
	}

	public final TextExpressionContext textExpression() throws RecognitionException {
		TextExpressionContext _localctx = new TextExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_textExpression);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(178); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(178);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
					case 1:
						{
						setState(176);
						match(SpeechChar);
						}
						break;
					case 2:
						{
						setState(177);
						_la = _input.LA(1);
						if ( _la <= 0 || (_la==NEWLINE) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(180); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode LEFTCHEVRON() { return getToken(YarnParser.LEFTCHEVRON, 0); }
		public IfExpressionContext ifExpression() {
			return getRuleContext(IfExpressionContext.class,0);
		}
		public TerminalNode RIGHTCHEVRON() { return getToken(YarnParser.RIGHTCHEVRON, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(YarnParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(YarnParser.WHITESPACE, i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).exitIfStatement(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(LEFTCHEVRON);
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE) {
				{
				{
				setState(183);
				match(WHITESPACE);
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(189);
			ifExpression();
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE) {
				{
				{
				setState(190);
				match(WHITESPACE);
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(196);
			match(RIGHTCHEVRON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseifStatementContext extends ParserRuleContext {
		public TerminalNode LEFTCHEVRON() { return getToken(YarnParser.LEFTCHEVRON, 0); }
		public ElseifExpressionContext elseifExpression() {
			return getRuleContext(ElseifExpressionContext.class,0);
		}
		public TerminalNode RIGHTCHEVRON() { return getToken(YarnParser.RIGHTCHEVRON, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(YarnParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(YarnParser.WHITESPACE, i);
		}
		public ElseifStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).enterElseifStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnListener ) ((YarnListener)listener).exitElseifStatement(this);
		}
	}
